--- a/softtek_project/templates/weather_change.html
+++ b/softtek_project/templates/weather_change.html
@@ -8,4 +8,11 @@
 
 <h2> si que si estas en el template de weather change</h2>
 
+<h4>Instructions</h4>
+<p> You have a table containing data on the weather.
+     Each date has a boolean indicating if it rained (TRUE) or did not rain (FALSE).
+     Query the table to determine the dates in which the weather became bad (i.e. when the weather changed from FALSE to TRUE).
+</p>
+
+
 {% endblock %}
