--- a/softtek_project/softtek_project/templates/navbar.html
+++ b/softtek_project/softtek_project/templates/navbar.html
@@ -8,19 +8,19 @@
         {% else %}<a href="{{index_url}}">Home</a>{% endif %}
      </span> 
 
-    {% url 'weather_change' as weather_url %}
+    {% url 'problems:weather_change' as weather_url %}
      <span>
         {% if request.path == weather_url %} Weather
          {% else %} <a href="{{weather_url}}"> Weather</a> {% endif %}
      </span>
 
-     {% url 'customer_order_status' as customer_url %}
+     {% url 'problems:customer_order_status' as customer_url %}
     <span>
         {% if request.path == customer_url %} Customer
         {% else %} <a href="{{customer_url}}">Customer</a> {% endif %}
     </span>
     
-    {% url 'seasons' as seasons_url %}
+    {% url 'problems:seasons' as seasons_url %}
     <span>
         {% if request.path == seasons_url %} Seasons
         {% else %} <a href="{{seasons_url}}">Seasons</a> {% endif %}
