implemented the get method that diplsays all the data on a table

--- a/softtek_project/templates/base.html
+++ b/softtek_project/templates/base.html
@@ -4,6 +4,23 @@
     <meta charset="UTF-8">
     <title>{% block title%} softtek interview {% endblock %}</title>
 
+   <style>
+        table {
+        font-family: arial, sans-serif;
+        border-collapse: collapse;
+        width: 20%;
+        }
+
+        td, th {
+        border: 1px solid #dddddd;
+        text-align: left;
+        padding: 8px;
+        }
+
+        tr:nth-child(even) {
+        background-color: #dddddd;
+        }
+   </style> 
     
 
 </head>
